# Live

./: CMakeLists.txt  README.md  board.cpp  board.h  frame.cpp  frame.h  game.cpp  game.h  main.cpp  point.cpp  point.h  setting.cpp  setting.h
